--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "keywords": [],
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
   }
 }
